--- a/mine/frontend/package.json
+++ b/mine/frontend/package.json
@@ -28,6 +28,7 @@
     "next": "^7.0.0",
     "next-with-apollo": "^3.1.3",
     "nprogress": "^0.2.0",
+    "prettier": "^1.18.2",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-adopt": "^0.6.0",
